Preparing to dockerize

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "form_node",
+  "name": "cte-exercise",
   "version": "1.0.0",
   "description": "CTE Exercise for Bruce Stephenson",
   "main": "index.js",
