--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
-    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "pug": "^3.0.0",
     "util.promisify": "^1.0.1",
     "passport": "^0.4.1",
-    "passport-auth0": "^1.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "passport-google": "^0.3.0"
   }
 }
